kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: build-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: build-service
  template:
    metadata:
      labels:
        app: build-service
    spec:
      containers:
      - name: build-service
        image: joelatngrok/ci-cd-demo:build-service
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: build-service
spec:
  selector:
    app: build-service
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-service
  template:
    metadata:
      labels:
        app: test-service
    spec:
      containers:
      - name: test-service
        image: joelatngrok/ci-cd-demo:test-service
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  selector:
    app: test-service
  ports:
  - port: 80
    targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deployment-service
  template:
    metadata:
      labels:
        app: deployment-service
    spec:
      containers:
      - name: deployment-service
        image: joelatngrok/ci-cd-demo:deployment-service
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: deployment-service
spec:
  selector:
    app: deployment-service
  ports:
  - port: 80
    targetPort: 8082
